--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ click-repl==0.3.0
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.1.1
+eventlet==0.36.1
 exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
